:bug: Fix the abnormal position of `.av__counter` element when font-size is too big

--- a/app/src/assets/scss/business/_av.scss
+++ b/app/src/assets/scss/business/_av.scss
@@ -44,6 +44,10 @@
     }
   }
 
+  &__titlebar {
+    position: relative;
+  }
+
   &__title {
     outline: none;
 
@@ -55,9 +59,10 @@
 
   &__counter {
     position: absolute;
-    bottom: 0;
-    height: 30px;
-    padding: 0 5px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-color: var(--av-background);
   }
 
